@@ -53,7 +53,7 @@ Create a `.env` file in your project root:
 # Model Selection
 # ===================
 # Format: <provider>/<model-name>
-# Supported providers: openai, anthropic, azure, ollama, gemini
+# Supported providers: openai, anthropic, azure, ollama, gemini, cohere
 LLM_MODEL=openai/gpt-4o
 
 # ===================
@@ -91,14 +91,25 @@ GOOGLE_API_KEY=your-google-api-key
 GEMINI_BASE_URL=https://generativelanguage.googleapis.com/v1beta  # Optional
 
 # ===================
+# Cohere Configuration
+# ===================
+COHERE_API_KEY=your-cohere-api-key
+COHERE_BASE_URL=https://api.cohere.com  # Optional
+
+# ===================
 # Tracing Configuration
 # ===================
-TRACING_MODE=langfuse  # Options: langfuse, console, none
+TRACING_MODE=langfuse  # Options: langfuse, opentelemetry, console, none
 
 # Langfuse settings (if using TRACING_MODE=langfuse)
 LANGFUSE_PUBLIC_KEY=pk-lf-...
 LANGFUSE_SECRET_KEY=sk-lf-...
 LANGFUSE_URL=https://cloud.langfuse.com  # or self-hosted
+
+# OpenTelemetry settings (if using TRACING_MODE=opentelemetry)
+OTEL_SERVICE_NAME=llm4s-agent
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+OTEL_EXPORTER_OTLP_HEADERS=authorization=Bearer <token>  # Optional
 
 # ===================
 # Embeddings Configuration (RAG)
@@ -139,6 +150,9 @@ sbt run
 
 **Option 2: Use sbt-dotenv plugin**
 
+{: .warning }
+**Java 16+ Compatibility Issue:** The sbt-dotenv plugin can cause a `java.lang.reflect.InaccessibleObjectException` at startup on Java 16+ due to module system restrictions. Use **Option 1** or **Option 3** as alternatives, or apply the fix below.
+
 Add to `project/plugins.sbt`:
 
 ```scala
@@ -146,6 +160,15 @@ addSbtPlugin("au.com.onegeek" %% "sbt-dotenv" % "2.1.233")
 ```
 
 Variables automatically load when SBT starts!
+
+**Java 16+ Fix:** If you see `InaccessibleObjectException`, create (or add to) `.jvmopts` in your project root:
+
+```
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+```
+
+Restart sbt after adding this file. This grants the plugin the reflective access it needs and works on all platforms.
 
 **Option 3: IntelliJ IDEA**
 
@@ -217,6 +240,15 @@ tracing {
     url = ${?LANGFUSE_URL}
     url = "https://cloud.langfuse.com"
   }
+
+  opentelemetry {
+    service-name = ${?OTEL_SERVICE_NAME}
+    service-name = "llm4s"
+    endpoint = ${?OTEL_EXPORTER_OTLP_ENDPOINT}
+    endpoint = "http://localhost:4317"
+    headers = ${?OTEL_EXPORTER_OTLP_HEADERS}
+    headers = ""  # Format: "key1=value1,key2=value2"
+  }
 }
 
 # Context window management
@@ -232,14 +264,29 @@ context {
 ```scala
 import org.llm4s.config.Llm4sConfig
 
-// Load provider-specific config
-val providerConfig = Llm4sConfig.provider()
+object ConfigurationLoader {
+  def load(): Unit = {
+    // 1. Load configuration at the application boundary
+    val configResult = for {
+      providerConfig <- Llm4sConfig.provider()
+      tracingConfig <- Llm4sConfig.tracing()
+      embeddingsConfig <- Llm4sConfig.embeddings()
+    } yield (providerConfig, tracingConfig, embeddingsConfig)
 
-// Load tracing config
-val tracingConfig = Llm4sConfig.tracing()
-
-// Load embeddings config
-val embeddingsConfig = Llm4sConfig.embeddings()
+    // 2. Pass configuration to your application components
+    configResult match {
+      case Right((provider, tracing, embeddings)) =>
+        // Initialize your application with loaded config
+        // val app = new MyApplication(provider, tracing, embeddings)
+        // app.start()
+        println("Configuration loaded successfully")
+      
+      case Left(error) =>
+        Console.err.println(s"Failed to load configuration: $error")
+        System.exit(1)
+    }
+  }
+}
 ```
 
 ---
@@ -445,17 +492,35 @@ import org.llm4s.llmconnect.EmbeddingClient
 import org.llm4s.llmconnect.config.EmbeddingModelConfig
 import org.llm4s.agent.memory.LLMEmbeddingService
 
-// Create embedding client from typed config
-val clientResult = for {
-  (provider, cfg) <- Llm4sConfig.embeddings()
-  client <- EmbeddingClient.from(provider, cfg)
-} yield client
+// Core logic depends on injected service
+class RAGService(embeddingService: LLMEmbeddingService) {
+  def processDocuments(docs: Seq[String]): Unit = {
+    // Use embeddingService...
+  }
+}
 
-// Or use the higher-level service
-val embeddingServiceResult = for {
-  client <- clientResult
-  model <- Llm4sConfig.textEmbeddingModel()
-} yield LLMEmbeddingService(client, EmbeddingModelConfig(model.modelName, model.dimensions))
+// Configuration boundary
+object RAGApplication extends App {
+  val startup = for {
+    // 1. Load config
+    (provider, cfg) <- Llm4sConfig.embeddings()
+    model <- Llm4sConfig.textEmbeddingModel()
+    
+    // 2. Build dependencies
+    client <- EmbeddingClient.from(provider, cfg)
+    
+    // 3. Create service
+    service = LLMEmbeddingService(
+      client, 
+      EmbeddingModelConfig(model.modelName, model.dimensions)
+    )
+  } yield new RAGService(service)
+
+  startup.fold(
+    err => println(s"Startup failed: $err"),
+    service => println("RAG Service started successfully")
+  )
+}
 ```
 
 ### System Properties (Alternative)
@@ -506,6 +571,116 @@ Get keys from [Langfuse](https://langfuse.com):
 2. Create a project
 3. Navigate to Settings → API Keys
 4. Copy public and secret keys
+
+
+### OpenTelemetry
+
+OpenTelemetry provides distributed tracing for observability across your infrastructure.
+
+**Setup:**
+
+```bash
+TRACING_MODE=opentelemetry
+OTEL_SERVICE_NAME=llm4s-agent
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+OTEL_EXPORTER_OTLP_HEADERS=authorization=Bearer <token>  # Optional
+```
+
+**Environment Variables:**
+
+| Variable | Default | Description |
+|----------|---------|-------------|
+| `TRACING_MODE` | `none` | Must be set to `opentelemetry` |
+| `OTEL_SERVICE_NAME` | `llm4s` | Service name for trace identification |
+| `OTEL_EXPORTER_OTLP_ENDPOINT` | `http://localhost:4317` | OpenTelemetry Collector endpoint |
+| `OTEL_EXPORTER_OTLP_HEADERS` | (empty) | Additional headers (comma-separated: `key1=value1,key2=value2`) |
+
+**Example Configuration:**
+
+```bash
+# Local Jaeger (via Docker)
+TRACING_MODE=opentelemetry
+OTEL_SERVICE_NAME=llm4s-agent
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+
+# Cloud Provider with Authentication
+TRACING_MODE=opentelemetry
+OTEL_SERVICE_NAME=llm4s-runner
+OTEL_EXPORTER_OTLP_ENDPOINT=https://otel-collector.example.com:4317
+OTEL_EXPORTER_OTLP_HEADERS=Authorization=Bearer sk-otel-token
+
+# Custom Headers (multiple values)
+OTEL_EXPORTER_OTLP_HEADERS=API-Key=secret123,Environment=production
+```
+
+**Spans Generated:**
+
+```
+Span: LLM Completion
+  ├─ gen_ai.request.model: gpt-4o
+  ├─ gen_ai.usage.input_tokens: 150
+  └─ gen_ai.usage.output_tokens: 50
+
+Span: Tool Execution: web_search
+  ├─ tool.name: web_search
+  ├─ tool.input: "Scala 3 features"
+  └─ duration_ms: 1234
+
+Span: Token Usage - completion
+  ├─ operation: completion
+  ├─ gen_ai.usage.total_tokens: 200
+  └─ cost.usd: 0.0042
+
+Span: Agent State Updated
+  ├─ status: RUNNING
+  ├─ message_count: 5
+  └─ log_count: 12
+```
+
+**Setting Up Jaeger (Local Development):**
+
+```bash
+# Start Jaeger all-in-one
+docker run -d \
+  -p 6831:6831/udp \
+  -p 6832:6832/udp \
+  -p 5778:5778 \
+  -p 16686:16686 \
+  -p 14268:14268 \
+  -p 14250:14250 \
+  -p 9411:9411 \
+  jaegertracing/all-in-one:latest
+
+# Configure LLM4S
+export TRACING_MODE=opentelemetry
+export OTEL_SERVICE_NAME=llm4s-dev
+export OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+
+# View traces at http://localhost:16686
+```
+
+**Code Usage:**
+
+```scala
+import org.llm4s.config.Llm4sConfig
+import org.llm4s.trace.Tracing
+
+// Automatic initialization from environment variables
+val tracing = Tracing.create(Llm4sConfig.tracing())
+
+// Or create directly
+import org.llm4s.trace.OpenTelemetryTracing
+val tracer = OpenTelemetryTracing.fromEnvironment()
+
+// Use tracer
+val result = for {
+  _ <- tracer.traceEvent(TraceEvent.AgentInitialized("query", List("tool1")))
+  _ <- tracer.traceTokenUsage(usage, "gpt-4o", "completion")
+} yield ()
+
+// Always shutdown
+tracer.shutdown()
+```
 
 ### Disable Tracing
 
@@ -593,9 +768,17 @@ Create `.env.prod`:
 ```bash
 LLM_MODEL=anthropic/claude-sonnet-4-5-latest
 ANTHROPIC_API_KEY=${PROD_ANTHROPIC_KEY}
-TRACING_MODE=langfuse
-LANGFUSE_PUBLIC_KEY=${PROD_LANGFUSE_PUBLIC}
-LANGFUSE_SECRET_KEY=${PROD_LANGFUSE_SECRET}
+
+# Tracing with OpenTelemetry
+TRACING_MODE=opentelemetry
+OTEL_SERVICE_NAME=llm4s-prod
+OTEL_EXPORTER_OTLP_ENDPOINT=https://otel-collector.prod.example.com:4317
+OTEL_EXPORTER_OTLP_HEADERS=Authorization=Bearer ${OTEL_AUTH_TOKEN}
+
+# Or use Langfuse
+# TRACING_MODE=langfuse
+# LANGFUSE_PUBLIC_KEY=${PROD_LANGFUSE_PUBLIC}
+# LANGFUSE_SECRET_KEY=${PROD_LANGFUSE_SECRET}
 ```
 
 Load the appropriate file:
@@ -620,14 +803,21 @@ sbt run
 ```scala
 import org.llm4s.config.Llm4sConfig
 
-val config = Llm4sConfig.provider()
-config.fold(
-  error => {
-    println(s"Configuration error: $error")
-    System.exit(1)
-  },
-  _ => println("Configuration loaded successfully")
-)
+object ApplicationBoundary {
+  def validateAndStart(): Unit = {
+    // Fail fast at startup if config is invalid
+    Llm4sConfig.provider().fold(
+      error => {
+        Console.err.println(s"FATAL: Configuration error: $error")
+        System.exit(1)
+      },
+      config => {
+        println(s"Configuration loaded for model: ${config.model}")
+        // startApplication(config)
+      }
+    )
+  }
+}
 ```
 
 ### ❌ DON'T
@@ -649,20 +839,21 @@ import org.llm4s.llmconnect.LLMConnect
 object ValidateConfig extends App {
   println("Validating LLM4S configuration...")
 
-  val validation = for {
+  // Perform validation at the application edge
+  val validationResult = for {
     providerConfig <- Llm4sConfig.provider()
     client <- LLMConnect.getClient(providerConfig)
-  } yield {
-    println(s"✅ Model: ${providerConfig.model}")
-    println(s"✅ Provider: ${providerConfig.getClass.getSimpleName}")
-    println(s"✅ Client ready: ${client.getClass.getSimpleName}")
-  }
+  } yield (providerConfig, client)
 
-  validation match {
-    case Right(_) =>
+  validationResult match {
+    case Right((config, client)) =>
+      println(s"✅ Model: ${config.model}")
+      println(s"✅ Provider: ${config.getClass.getSimpleName}")
+      println(s"✅ Client ready: ${client.getClass.getSimpleName}")
       println("✅ Configuration valid!")
+      
     case Left(error) =>
-      println(s"❌ Configuration error: $error")
+      Console.err.println(s"❌ Configuration error: $error")
       System.exit(1)
   }
 }
@@ -885,8 +1076,8 @@ Configuration complete! Now you can:
 
 1. **[Explore features →](next-steps)** - Dive into agents, tools, and more
 2. **[Browse examples →](/examples/)** - See configuration in action
-3. **[User guide →](/guide/basic-usage)** - Learn core concepts
-4. **[Observability →](/guide/observability)** - Set up tracing
+3. **[User guide →](../guide/basic-usage)** - Learn core concepts
+4. **[Observability →](../guide/observability)** - Set up tracing
 
 ---
 
